# faker.py

./: .gitignore  README.md  make_list.py  namen.txt  pyproject.toml  remove_empty_lines.py  remove_extra_data.py  remove_leading_spaces.py  remove_uniqe_lines.py
faker/: Companies.py  __init__.py  domain_namen.py  functies.py  namen.py  namen.txt  random_Username.py  random_adress.py  random_companyName.py  random_companySuffix.py  random_datum.py  random_domain.py  random_email.py  random_naam.py  random_number.py  random_slogan.py  random_stad.py  random_straat.py  random_telefoon_nummer.py  random_top_level_domain.py  random_us_adress.py  random_us_company.py  random_zipcode.py  slogans.py  straten.py  top_level_domain_lijst.py  us_counties.py  us_staten.py  username_lijst.py
faker/functies/: random_Username.py  random_achternaam.py  random_companySuffix.py  random_datum.py  random_domain.py  random_email.py  random_ip_adress.py  random_land.py  random_naam.py  random_number.py  random_slogan.py  random_stad.py  random_straat.py  random_top_level_domain.py  random_us_adress.py  random_us_company.py  random_voornaam.py  random_zin.py
faker/lijsten/: achternamen.py  domain_namen.py  landen.py  namen.py  nl_lorem.py  slogans.py  steden.py  straten.py  top_level_domain_lijst.py  us_companies.py  us_counties.py  us_lorem.py  us_staten.py  username_lijst.py
tools/: make_list.py  remove_empty_lines.py  remove_extra_data.py  remove_uniqe_lines.py
